logs/django-giom.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_giom-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/giom_data'...
Listing './lib/python3.5/site-packages/giom_data/management'...
Listing './lib/python3.5/site-packages/giom_data/management/commands'...
Compiling './lib/python3.5/site-packages/giom_data/management/commands/read_giom_csv.py'...
***   File "./lib/python3.5/site-packages/giom_data/management/commands/read_giom_csv.py", line 15
    print "%s,%s" % (k, d[k])
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/giom_data/management/commands/read_giom_xml.py'...
***   File "./lib/python3.5/site-packages/giom_data/management/commands/read_giom_xml.py", line 13
    print gdr.read_data_xml()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/giom_data/templates'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
